# alabs-raas

./: Cargo.toml
config/config_clap/: Cargo.toml
config/config_clap/src/: main.rs
config/config_envfile/: .env  Cargo.toml
config/config_envfile/src/: main.rs
config/config_http/: .env  Cargo.toml  settings.toml
config/config_http/src/: main.rs
config/config_minimal/: Cargo.toml
config/config_minimal/src/: main.rs
deployment/bookstore/: Cargo.toml  Dockerfile  auth.db  bookstore.db  compose.yaml
deployment/bookstore/src/: main.rs  service_config.rs
deployment/bookstore/src/auth/: auth_layers.rs  configuration.rs  db.rs  mod.rs  web_service.rs
deployment/bookstore/src/book_store/: configuration.rs  db.rs  mod.rs  web_service.rs
deployment/bookstore/static_html/: book.html
grpc/hello_tonic/: Cargo.toml  build.rs
grpc/hello_tonic/proto/: hello.proto
grpc/hello_tonic/src/: client.rs  server.rs
grpc/tonic_auth/: Cargo.toml
grpc/tonic_auth/src/: client.rs  server.rs
grpc/tonic_stream/: Cargo.toml  build.rs
grpc/tonic_stream/src/: client.rs  server.rs
open_api/axum_open_api/: Cargo.toml
open_api/axum_open_api/src/: main.rs
rest_service/axum_extractors/: Cargo.toml
rest_service/axum_extractors/src/: main.rs
rest_service/minimal_http_server/: Cargo.toml
rest_service/minimal_http_server/src/: main.rs
rest_service/router_layer_response/: Cargo.toml
rest_service/tower_mutable_server_state/: Cargo.toml
rest_service/tower_mutable_server_state/src/: main.rs
rest_service/tower_simple_server_state/: Cargo.toml
rest_service/tower_simple_server_state/src/: main.rs
src/: main.rs
tracing/axum_minimal_tracing/: Cargo.toml
tracing/axum_minimal_tracing/src/: main.rs
tracing/axum_timing_spans/: Cargo.toml
tracing/axum_timing_spans/src/: main.rs
tracing/axum_tracing_tower/: Cargo.toml
tracing/axum_tracing_tower/src/: main.rs
tracing/trace_to_file/: Cargo.toml
tracing/trace_to_file/src/: main.rs
tracing/trace_to_file/test.log/: prefix.log.2025-08-31-13
tracing/trace_to_file/test_json.log/: prefix.log.2025-08-31-13
web_socket/ws_client/: Cargo.toml
web_socket/ws_client/src/: main.rs
web_socket/ws_echo/: Cargo.toml
web_socket/ws_echo/src/: main.rs
web_socket/ws_json/: Cargo.toml
web_socket/ws_json/src/: json.html  main.rs
