[package]
name = "http_server"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace]
members = [
    "rest_service/router_layer_response",
    
    # tracing
    "tracing/axum_minimal_tracing", #1
    "tracing/axum_timing_spans", #3
    "tracing/axum_tracing_tower", #2
    "tracing/trace_to_file" #4
]

[workspace.dependencies]
axum = { version = "0.8.4" } 
tokio = { version = "1.47.1", features = ["full"] }
