[package]
name = "http_server"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace]
members = [ 
    # configurations
    "config/config_clap", #4
    "config/config_envfile", #1
    "config/config_http", #3
    "config/config_minimal", #2
    
    # grpc
    "grpc/hello_tonic", #1
    "grpc/tonic_auth", #3
    "grpc/tonic_stream", #2
    
    # open_api section
    "open_api/axum_open_api",
    
    # rest_service section
    "rest_service/router_layer_response",
    
    # tracing section
    "tracing/axum_minimal_tracing", #1
    "tracing/axum_timing_spans", #3
    "tracing/axum_tracing_tower", #2 
    "tracing/trace_to_file" #4
]

[workspace.dependencies]
axum = { version = "0.8.4" } 
tokio = { version = "1.47.1", features = ["full"] }
