[package]
name = "axum_open_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { workspace = true }
utoipa = "5.4.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
